@@ -1,3 +1,7 @@
+Fri Jul 24 16:08:22 1998  Lynn Quam <quam@ai.sri.com>
+
+	* Environment.java (put_global):  New method.
+
 Wed Jul 22 21:42:42 1998  Per Bothner  <bothner@cygnus.com>
 
 	New directory.  Files mostly moved from ../../kawa/lang.
